if BUILD_C
PERF_DIR_C = c
endif

if BUILD_CPP
PERF_DIR_CPP = cpp
endif

if BUILD_PYTHON
PERF_DIR_P = python
endif

if BUILD_JAVA
PERF_DIR_J = java
endif

if BUILD_RUBY
PERF_DIR_R = ruby
endif

SUBDIRS = $(PERF_DIR_C) $(PERF_DIR_CPP) $(PERF_DIR_P) \
    $(PERF_DIR_J) $(PERF_DIR_R)
DIST_SUBDIRS = c cpp python java ruby
